Did some ajustments in Css

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 id="myH1">Be you can guess the number?</h1>
+    <div id="container">
+      <h1 id="myH1">Be you can guess the number?</h1>
 
-    <label id="myLabel" for="">Input the number</label>
-    <input id="myNumber" type="text" /> <br />
-    <button id="submitBtn">Submit</button>
+      <label id="myLabel" for="">Input the number</label>
+      <input id="myNumber" type="text" /> <br />
+      <button id="submitBtn">Submit</button>
 
-    <h3 id="myH3"></h3>
-
+      <h5 id="myH5"></h5>
+      <h3 id="myH3"></h3>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
